# doc-versions

./: .gitignore  LICENSE  README.md  docker-compose.yml
backend/: Cargo.toml  Dockerfile  configuration.yaml  configuration_test.yaml  worspace_README.md
backend/src/: configuration.rs  main.rs  startup.rs
backend/src/routes/: branches.rs  files.rs  mod.rs  workspaces.rs
backend/tests/: change_branch.rs  create_branch.rs  create_file.rs  create_workspace.rs  delete_file.rs  delete_workspace.rs  health_check.rs  retrieve_branches.rs  retrieve_file_content.rs  retrieve_files_status.rs  retrieve_logs.rs  retrieve_workspaces.rs  update_file.rs
backend/tests_execution/: example.yaml
frontend/: .eslintrc.json  Dockerfile  nginx.conf  package-lock.json  package.json
frontend/public/: electron.js
frontend/src/: App.js
frontend/src/components/: Document.js  DraftEditor.css  FileEditor.css  FileEditor.js  FileTree.js  GitGraph.js  Workspace.js
